objects/geopointe__Assignment_Plan__c.object
<CustomObject>
    <description>The is a legacy Geopointe object. It is no longer used and can be safely deleted.</description>
    <fields>
        <fullName>geopointe__Custom_Assignment_Field__c</fullName>
        <inlineHelpText>This is the Geopointe Assignment field on your Standard or Custom object that will be populated with the matching Geopointe Assignment record.</inlineHelpText>
        <label>Custom Assignment Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Custom_Assignment_Object__c</fullName>
        <inlineHelpText>This is an the Custom Object you create that links Geopointe Assignments (geographic areas) to the standard or custom object in your system. This object you create should have Master-Detail to Geopointe Assignment and your custom/standard object.</inlineHelpText>
        <label>Custom Assignment Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <inlineHelpText>Short description for this Assignment Plan.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Batch_Run_Date__c</fullName>
        <inlineHelpText>Date and time the last Assignment batch job ran. This field should not be modified by users.</inlineHelpText>
        <label>Last Batch Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object__c</fullName>
        <inlineHelpText>API Name of the Map Object this Assignment Plan will run against.</inlineHelpText>
        <label>Map Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__SOQL_Filter__c</fullName>
        <inlineHelpText>A SOQL WHERE clause (without including &quot;WHERE&quot;) can be present here to add a hardcoded filter to the Assignment Plan.</inlineHelpText>
        <label>SOQL Filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DELETE ME (Assignment Plan)</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DELETE ME</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>